--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
 
                     </li>
                 </h3>
-                <code>
-<pre class="hidden"><span>fruits.push('Mango')</span><span class="comment">// ["Strawberry", "Banana", "Mango"]</span>
+                <code class="placeHolder"><pre><span class="blink">|</span></pre></code><code><pre class="hidden"><span>fruits.push('Mango')</span><span class="comment">// ["Strawberry", "Banana", "Mango"]</span>
 <span>let pos = fruits.indexOf('Banana')</span>
 <span class="comment">// 1</span></pre></code>
                 <h3>
