--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="code-container"><code class="placeHolder"><pre></pre></code><code><pre class="hidden"><span class="color-dark-blue">let</span> <span class="color-blue">last</span> = <span class="color-blue">fruits</span>.<span class="color-orange">pop()</span> <span class="comment">// remove blue (from the end)</span>
 <span class="comment">// ["Apple", "Banana"]</span></pre></code></div>
                 <h3>
-                    <li>Add an item to the beginning of an Array
+                    <li><img src="icon_code.svg" alt="code icon" class="icon">Add an item to the beginning of an Array
 
                     </li>
                 </h3>
